--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -48,4 +48,13 @@ jobs:
         run: mix credo --strict
 
       - name: Run tests with coverage check
-        run: mix test --cover
+        run: mix do compile --warnings-as-errors, coveralls.json
+
+      - name: Upload coverage report to CodeCov
+        if: github.ref == 'refs/heads/master'
+        uses: codecov/codecov-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          name: ecto_xml
+          fail_ci_if_error: true
+          verbose: true
